--- a/ba thesis/hinweiseabschlussarbeit.bib
+++ b/ba thesis/hinweiseabschlussarbeit.bib
@@ -1,299 +1,247 @@
-@book{Beut2009,
-  %required: author,title,publisher,year
-  %optional: volume,number,series,address,edition,month,isbn,note
-  author={Beutelspacher, Albrecht},
-  title={{Kryptologie: Eine Einführung in die Wissenschaft vom Verschlüsseln,
-    Verbergen und Verheimlichen}},
-  publisher={Vieweg + Teubner},
-  year={2009},
-  address={Wiesbaden},
-  edition={9. akt. Auflage},
-  % isbn={9783834896063}, % ISBN-Angabe bitte möglichst nicht verwenden
-}
+@article{Grah10,
+ author = {Graham, Martin and Kennedy, Jessie},
+ title = {A Survey of Multiple Tree Visualisation},
+ journal = {Information Visualization},
+ issue_date = {Winter 2010},
+ volume = {9},
+ number = {4},
+ month = dec,
+ year = {2010},
+ issn = {1473-8716},
+ pages = {235--252},
+ numpages = {18},
+ url = {http://dx.doi.org/10.1057/ivs.2009.29},
+ doi = {10.1057/ivs.2009.29},
+ acmid = {1991825},
+ publisher = {Palgrave Macmillan},
+ keywords = {layout techniques, multiple trees, survey},
+} 
 
-@book{Posp2012,
-  %required: author,title,publisher,year
-  %optional: volume,number,series,address,edition,month,isbn,note
-  author={Pospiech, Ulrike},
-  title={{Wie schreibt man wissenschaftliche Arbeiten? -- Alles Wichtige von der
-    Planung bis zum fertigen Text}},
-  publisher={Dudenverlag},
-  year={2002},
-  address={Mannheim/Zürich},
-  % isbn={9783411747115}, % ISBN-Angabe bitte möglichst nicht verwenden
-}
+@inproceedings{Ecke10,
+ author = {Eckersley, Peter},
+ title = {How Unique is Your Web Browser?},
+ booktitle = {Proceedings of the 10th International Conference on Privacy Enhancing Technologies},
+ series = {PETS'10},
+ year = {2010},
+ isbn = {3-642-14526-4, 978-3-642-14526-1},
+ location = {Berlin, Germany},
+ pages = {1--18},
+ numpages = {18},
+ url = {http://dl.acm.org/citation.cfm?id=1881151.1881152},
+ acmid = {1881152},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
 
-@book{Schl2013,
-  %required: author,title,publisher,year
-  %optional: volume,number,series,address,edition,month,isbn,note
-  author={Schlosser, Joachim},
-  title={{Wissenschaftliche Arbeiten schreiben mit LaTeX -- Leitfaden für
-    Einsteiger}},
-  publisher={mitp-Verlag},
-  year={2013},
-  address={Heidelberg},
-  edition={5. Auflage},
-  % isbn={9783826694868}, % ISBN-Angabe bitte möglichst nicht verwenden
-}
+@inproceedings{Chi,
+ author = {Chi, Ed H.},
+ title = {A Taxonomy of Visualization Techniques Using the Data State Reference Model},
+ booktitle = {Proceedings of the IEEE Symposium on Information Vizualization 2000},
+ series = {INFOVIS '00},
+ year = {2000},
+ isbn = {0-7695-0804-9},
+ pages = {69--},
+ url = {http://dl.acm.org/citation.cfm?id=857190.857691},
+ acmid = {857691},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {Information Visualization, Data State Model, Reference Model, Taxonomy, Techniques, Operators},
+} 
 
-@book{ScWe2007,
-  %required: author,title,publisher,year
-  %optional: volume,number,series,address,edition,month,isbn,note
-  author={Schneider, Uwe},
-  title={{Taschenbuch der Informatik}},
-  publisher={Carl-Hanser-Verlag},
-  year={2007},
-  address={Leipzig},
-  edition={6. Auflage},
-  % isbn={9783446407541}, % ISBN-Angabe bitte möglichst nicht verwenden
-}
-
-% ----- Artikel einer Zeitung oder eines Journals
-
-@article{Kili2006,
-  %required: author,title,journal,year
-  %optional: volume,number,pages,month,note,doi/url+urldate
-  author={Kilian, Detlef},
-  title={{Einführung in Informationssicherheitsmanagementsysteme (I) -
-    Begriffsbestimmung und Standards}},
-  journal={Datenschutz und Datensicherheit DuD},
-  year={2006},
-  volume={30},
-  number={10},
-  pages={651-654},
-}
-
-@article{Lamp1981,
-  %required: author,title,journal,year
-  %optional: volume,number,pages,month,note,doi/url+urldate
-  author={Lamport, Leslie},
-  title={{Password authentication with insecure communication}},
-  journal={Communications of the ACM},
-  year={1981},
-  volume={24},
-  number={11},
-  pages={770-772},
-}
-
-@article{ThKZ2002,
-  %required: author,title,journal,year
-  %optional: volume,number,pages,month,note,doi/url+urldate
-  author={Thalheim, Lisa and Krissler, Jan and Ziegler, Peter-Michael},
-  title={{Körperkontrolle -- Biometrische Zugangssicherungen auf die Probe
-    gestellt}},
-  journal={ct},
-  year={2002},
-  number={11},
-  pages={114--123},
-}
-
-% ----- Konferenzbeiträge
-
-@inproceedings{HSFN2009,
-  %required: author,title,booktitle,year,editor,publisher
-  %optional: series,volume,number,pages,address,month,organization,note,
-  %  doi/url+urldate
-  author={Herrmann, Dominik and Scheuer, Florian and Feustel, Philipp and Nowey,
-    Thomas and Federrath, Hannes},
-  title={{A Privacy-Preserving Platform for User-Centric Quantitative
-    Benchmarking}},
-  booktitle={Proceedings of the 6th International Conference on Trust, Privacy
-  and Security in Digital Business},
-  year={2009},
-  editor={Fischer{-}Hübner, Simone and Lambrinoudakis, Costas and Pernul,
-    Günther},
-  volume={5695},
-  series={Lecture Notes in Computer Science},
-  pages={32-41},
-  address={Berlin},
-  publisher={Springer-Verlag},
-}
-
-@inproceedings{InBr2009,
-  %required: author,title,booktitle,year,editor,publisher
-  %optional: series,volume,number,pages,address,month,organization,note,
-  %  doi/url+urldate
-  author={Innerhofer-Oberperfler, Frank and Breu, Ruth},
-  title={{An empirically derived loss taxonomy based on publicly known security incidents}},
-  booktitle={Proc. of International Conference on Availability, Reliability and Security (ARES'09)},
-  year={2009},
-  pages={66-73},
-  organisation={IEEE},
-  address={Fukuoaka, Japan},
-  month=mar,
-}
-
-@inproceedings{WWPK2010,
-  %required: author,title,booktitle,year,editor,publisher
-  %optional: series,volume,number,pages,address,month,organization,note,
-  %  doi/url+urldate
-  author={Westermann, Benedikt and Wendolsky, Rolf and Pimenidis, Lexi and
-    Kesdogan, Dogan},
-  title={{Cryptographic Protocol Analysis of AN.ON}},
-  booktitle={Financial Cryptography and Data Security: 14th International
-    Conference, FC 2010},
-  year={2010},
-  editor={Sion, Radu},
-  series={Lecture Notes in Computer Science},
-  volume={6052},
-  pages={114-128},
-  address={Canary Islands, Spain},
-  month=jan,
-  publisher={Springer Science \& Business Media},
-  url={http://dx.doi.org/10.1007/978-3-642-14577-3_11},
-  urldate={2016-08-02},
-}
-
-% ----- Onlinequellen
-
-@online{Bier2009,
-  %required: author,title,year,url+urldate
-  %optional: version,organisation,month,note
-  author={Bier, Christoph},
-  title={{typokurz -- Einige wichtige typographische Regeln)}},
-  year={2009},
-  month=may,
-  url={https://zvisionwelt.files.wordpress.com/2012/01/typokurz.pdf},
-  % https://zvisionwelt.wordpress.com/downloads/
-  urldate={2016-07-13},
-}
-
-@online{CCC2009,
-  %required: author,title,year,url+urldate
-  %optional: version,organisation,month,note
-  author={Kurz, Constanze and Rieger, Frank},
-  title={{Chaos Computer Club veröffentlicht Stellungnahme zur
-    Vorratsdatenspeicherung}},
-  year={2009},
-  month=jul,
-  url={http://www.ccc.de/updates/2009/vds-gutachten},
-  urldate={2014-12-05},
-}
-
-@online{faui2,
-  %required: author,title,year,url+urldate
-  %optional: version,organisation,month,note
-  author={Friedrich-Alexander Universität Erlangen-Nürnberg},
-  title={{Beurteilung von wissenschaftlichen Arbeiten am Lehrstuhl für
-    Informatik 2 (Programmiersysteme)}},
-  year={2012},
-  month=mar,
-  url={https://www2.informatik.uni-erlangen.de/teaching/thesis/review.html},
-  urldate={2014-12-05},
-}
-
-@online{Heise2011,
-  %required: author,title,year,url+urldate
-  %optional: version,organisation,month,note
-  author={Heise Security News},
-  title={{US-Professor wirft Sony Mitschuld am PSN-Hack vor}},
-  year={2011},
-  month=may,
-  url={http://www.heise.de/-1238676},
-  urldate={2014-12-05},
-}
-
-@online{textwahrnehmung,
-  %required: author,title,year,url+urldate
-  %optional: version,organisation,month,note
-  author={Spiegel Online},
-  title={{Textwahrnehmung - Simple Sprache wirkt intelligenter}},
-  year={2005},
-  month=nov,
-  url={http://www.spiegel.de/wissenschaft/mensch/0,1518,382730,00.html},
-  urldate={2014-12-05},
-}
-
-@online{Wiki,
-  %required: author,title,year,url+urldate
-  %optional: version,organisation,month,note
-  author={Wikipedia},
-  title={{Enigma (Maschine)}},
-  year={2011},
-  month=apr,
-  url={http://de.wikipedia.org/w/index.php?title=Enigma_(Maschine)&oldid=88241310},
-  urldate={2014-12-05},
-}
-
-% ----- Weitere
-
-%@incollection{<key>,
-%  %required: author,title,booktitle,year,editor,publisher
-%  %optional: series,volume,number,type,chapter,pages,address,edition,
-%  %  month,isbn,note,doi/url+urldate
+%@Proceedings{Ecke10,
+%title = {How Unique Is Your Browser?, Proceedings of the Privacy Enhancing Technologies Symposium},
+%author = {P. Eckersley},
+%year = {(PETS) 2010},
+%OPTkey = {•},
+%OPTeditor = {•},
+%OPTvolume = {•},
+%OPTnumber = {•},
+%OPTseries = {10},
+%OPTaddress = {Berlin, Germany},
+%OPTmonth = {July},
+%OPTorganization = {Electronic Frontier Foundation},
+%OPTpublisher = {Springer Lecture Notes in Computer Science},
+%OPTnote = {•},
+%OPTannote = {•}
 %}
 
-%@patent{<key>,
-%  %required: author,title,number,year
-%  %optioal: holder,version,month,type,address,note,doi/url+urldate
-%}
+@inproceedings{Boda,
+ author = {Boda, K\'{a}roly and F\"{o}ldes, \'{A}d\'{a}m M\'{a}t{\'e} and Guly\'{a}s, G\'{a}bor Gy\"{o}rgy and Imre, S\'{a}ndor},
+ title = {User Tracking on the Web via Cross-browser Fingerprinting},
+ booktitle = {Proceedings of the 16th Nordic Conference on Information Security Technology for Applications},
+ series = {NordSec'11},
+ year = {2012},
+ isbn = {978-3-642-29614-7},
+ location = {Tallinn, Estonia},
+ pages = {31--46},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1007/978-3-642-29615-4_4},
+ doi = {10.1007/978-3-642-29615-4_4},
+ acmid = {2341497},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {profiling, user identification, user tracking, web privacy},
+} 
 
-%@thesis{<key>,
-%  %required: author,title,type,institution,year
-%  %optional: month,pubstate,address,note,doi/url+urldate
-%}
-
-%@unpublished{<key>,
-%  %required: author,title,year
-%  %optional: month,pubstate,address,note,url+urldate
-%}
-
-@misc{Tolk2003,
-  %required: author,title,year
-  %optional: howpublished,version,organisation,month,address,note,url+urldate
-  author={Tolksdorf, Robert},
-  title={{Wie halte ich ein Referat und wie schreibe ich ein Papier}},
-  year={2003},
-  howpublished={Präsentation},
-  address={FU Berlin},
+@online{Yaho17,
+author = {Daniel AJ Sokolov},
+title = {Rekordhack bei Yahoo war drei Mal so groß},
+year = {2017},
+url = {https://www.heise.de/security/meldung/Rekordhack-bei-Yahoo-war-drei-Mal-so-gross-3849303.html},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {german},
+OPTversion = {•},
+OPTnote = {•},
+OPTorganization = {Heise Medien GmbH & Co. KG},
+OPTdate = {04},
+OPTmonth = {10},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
 }
 
-% ----- Die Quellen aus der Muster-Literaturliste
-
-@article{Chau81,
-	Author = {David Chaum},
-	Journal = {Communications of the ACM},
-	Volume = 24,
-	Number = 2,
-	Pages = {84-88},
-	Title = {Untraceable Electronic Mail, Return Addresses, and Digital Pseudonyms},
-	Year = 1981
+@online{treemap,
+author = {S. Ribecca},
+title = {The Data Visualisation Catalogue},
+year = {},
+url = {https://datavizcatalogue.com/methods/treemap.html},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {english},
+OPTversion = {•},
+OPTnote = {•},
+OPTorganization = {},
+OPTdate = {},
+OPTmonth = {},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
 }
 
-@article{Chau88,
-	Author = {David Chaum},
-	Journal = {Journal of Cryptology},
-	Pages = {65-75},
-	Title = {The Dining Cryptographers Problem: Unconditional Sender and Recipient Untraceability},
-	Volume = 1,
-	Number = 1,
-	Year = 1988
+@online{HTTP,
+author = {R. Fielding J.Gettys  J. Mogul  H. Frystyk L. Masinter  P. Leach T. Berners-Lee},
+title = {Hypertext Transfer Protocol -- HTTP/1.1},
+year = {June 1999},
+url = {https://tools.ietf.org/html/rfc2616},
+shorthand = {RFC2616},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {english},
+OPTversion = {•},
+OPTnote = {•},
+OPTorganization = {},
+OPTdate = {},
+OPTmonth = {},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
 }
 
-@article{GoRS99,
-	Author = {David M. Goldschlag and Michael G. Reed and Paul F. Syverson},
-	Journal = {Communications of the ACM},
-	Number = 2,
-	Pages = {39-41},
-	Title = {Onion routing for anonymous and private Internet connections},
-	Volume = 42,
-	Year = 1999
+@online{RFC5737,
+author = {J. Arkko M. Cotton L. Vegoda},
+title = {IPv4 Address Blocks Reserved for Documentation},
+year = {January 2010},
+url = {https://tools.ietf.org/html/rfc5737},
+shorthand = {RFC5737},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {english},
+OPTversion = {•},
+OPTnote = {•},
+OPTorganization = {},
+OPTdate = {},
+OPTmonth = {},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
 }
 
-@book{Pfit90,
-	Author = {Andreas Pfitzmann},
-	Publisher = {Springer-Verlag, Berlin},
-	Series = {{IFB }234},
-	Title = {Diensteintegrierende Kommunikationsnetze mit teilnehmerüberprüfbarem Datenschutz},
-	Year = 1990
+@online{RFC7231,
+author = {R. Fielding J. Reschke},
+title = {Hypertext Transfer Protocol (HTTP/1.1): Semantics and Content},
+year = {June 2014},
+url = {https://tools.ietf.org/html/rfc7231},
+shorthand = {RFC7231},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {english},
+OPTversion = {•},
+OPTnote = {•},
+OPTorganization = {},
+OPTdate = {},
+OPTmonth = {},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
 }
 
-@inproceedings{WaMS2008,
-	Author = {Wei Wang and Mehul Motani and Vikram Srinivasan},
-	Title = {Dependent link padding algorithms for low latency anonymity systems},
-	Booktitle = {Proc. 15th ACM conference on Computer and communications security},
-	Pages = {323-332},
-	Publisher = {ACM},
-	Year = {2008}
+@online{RFC1321,
+author = {R. Rivest},
+title = {The MD5 Message-Digest Algorithm},
+year = {April 1992},
+url = {https://tools.ietf.org/html/rfc1321},
+shorthand = {RFC1321},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {english},
+OPTversion = {•},
+OPTnote = {•},
+OPTorganization = {},
+OPTdate = {},
+OPTmonth = {},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
 }
 
+@online{MDN,
+author = {F. Scholz},
+title = {User-Agent},
+year = {2017},
+url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/User-Agent},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {english},
+OPTversion = {•},
+OPTnote = {•},
+OPTorganization = {mozilla.org},
+OPTdate = {},
+OPTmonth = {},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
+}
+
+@online{ASPDoc,
+author = {D. Roth Rick A. Shaun Luttin},
+title = {Introduction to ASP.NET Core},
+year = {2018},
+url = {https://docs.microsoft.com/en-us/aspnet/core/?view=aspnetcore-2.1},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {english},
+OPTversion = {•},
+OPTnote = {•},
+OPTorganization = {mozilla.org},
+OPTdate = {},
+OPTmonth = {},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
+}
+
+@inproceedings{Tor,
+ author = {Dingledine, Roger and Mathewson, Nick and Syverson, Paul},
+ title = {Tor: The Second-generation Onion Router},
+ booktitle = {Proceedings of the 13th Conference on USENIX Security Symposium - Volume 13},
+ series = {SSYM'04},
+ year = {2004},
+ location = {San Diego, CA},
+ pages = {21--21},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=1251375.1251396},
+ acmid = {1251396},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
